--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "bootstrap": "^5.3.5",
     "lucide-react": "^0.501.0",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
