--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "firebase": "^11.7.3",
     "lucide-react": "^0.501.0",
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
